<resources>
    <string name="app_name">PolyFinder</string>
    <string name="image_button">ImageButton</string>
    <string name="account">Account</string>
    <string name="human_name">John</string>
    <string name="human_surname">Smith</string>
    <string name="save_info_button">Save</string>
    <string name="course">Курс</string>
    <string name="direction">Направление</string>
    <string name="telephone_field">+79214566325</string>
    <string name="group_in_university">23534/5</string>
    <string name="vk_link">Ссылка на Вк</string>
    <string name="backToMain">back to scroll tabs</string>
    <string name="setimagefromphone">SetImage</string>
    <string name="choiceToDo">Нашел | Потерял</string>
    <string name="publish_button">Publish</string>
    <string name="description">Описание</string>
    <string name="communication_method">Способ связи</string>
    <string name="whereIsFound">Где найдено</string>
    <string name="title">Заголовок</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="create_an_account">Create an account</string>
    <string name="create">create</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="search">Search</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="groud_number">Group number</string>
    <string name="telephone">Phone number</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="your_current_password">your current password</string>
    <string name="name_surname">Name Surname</string>
    <string name="somebody_gmail_com">Somebody@gmail.com</string>
    <string name="sort_button">sort_button</string>
</resources>
