<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/upBgColor">

    <include
        android:id="@+id/start_toolbar"
        layout="@layout/start_toolbar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:scrollbarSize="0.dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/polylogo" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBgImage"
                android:ems="10"
                android:hint="@string/email"
                android:lines="1"
                android:textColor="@color/borderColor"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBgImage"
            android:lines="1"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/borderColor"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="forgot password?"
            android:layout_gravity="center"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_sign_in_button"
            android:hint="@string/sign_in"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_register_view2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView"
                android:text="Register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>